# CS461-SimulationCapstone

./: .gitattributes  .gitignore  Cargo.toml  README.md
assets/plane/: boeing_787.gltf  boeing_787.license
assets/shaders/: pattern.frag  pattern.vert  terrain_shader.wgsl
bevy_flycam-master/examples/: basic.rs
bevy_flycam-master/src/: lib.rs
plane/: Cargo.toml
plane/src/: camera.rs  main.rs  player.rs  world.rs
src/: camera.rs  lib.rs  main.rs  materials.rs  player.rs  scene.rs  ui.rs  window.rs
src/main_menu/: components.rs  mod.rs  styles.rs
src/main_menu/systems/: interactions.rs  layout.rs
wip/: software-development-process.md
