[package]
name = "CS461-SimulationCapstone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.0"
bevy_obj = "0.12"
image = "0.24.8"
once_cell = "1.19.0"
reqwest = { version = "0.11", features = ["blocking"]}
dotenv = "0.15.0"
futures-lite = "2.2.0"