[package]
name = "CS461-SimulationCapstone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.0"
bevy_obj = "0.13"
image = "0.24.8"
once_cell = "1.19.0"
reqwest = { version = "0.11", features = ["blocking", "cookies"]}
dotenv = "0.15.0"
futures-lite = "2.2.0"
bevy_third_person_camera = "0.1.10"
rand = "0.7.0"
